--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -146,7 +146,7 @@
                                     <span class="badge badge-success">{{lst.statusName}}</span>
                                 </div>
                                 <div class="order-parts">
-                                    <a href="{{Report_Path}}OrderId={{lst.orderId}}" target="_blank">Download Invoice</a>
+                                    <a href="{{Report_Path}}OrderId={{lst.orderId}}&ReportType=1" target="_blank">Download Invoice</a>
                                 </div>
                                 <div class="order-parts">
                                     <input type="button" id="btn{{lst.orderId}}" value="Show" class="btn btn-primary" (click)="ShowDiv(lst.orderId);">
