--- a/src/app/shared/footer/footer-one/footer-one.component.html
+++ b/src/app/shared/footer/footer-one/footer-one.component.html
@@ -35,20 +35,23 @@
 						<h4>about</h4>
 					</div>
 					<div class="footer-contant">
-						<div class="footer-logo">
-							<!-- <img [src]="themeLogo" alt="logo"> -->
-							<h4>VIKRAM CREATIONS PRIVATE LIMITED</h4>
+						<div class="sub-title">
+							<div class="footer-title">
+								<!-- <img [src]="themeLogo" alt="logo"> -->
+								<h4>VIKRAM CREATIONS PRIVATE LIMITED</h4>
+							</div>
+							<p>Established in the year 1999, Vikram Creations Pvt. Ltd, is a well known fashion house based
+								out of New
+								Delhi, India. The comapany is a renowned as a manufacturer, wholesaler, trader and supplier
+								of women
+								fashion. The company owns and operates 7 brands namely Elomelo, Style Girl, A Sweet Design,
+								Elly Ross,
+								Style Plus, Denim Studio and Active Spirits, each with their own distinct identity. All
+								these branded
+								garments are especially designed and crafted by a well trianed team of in-house designers.
+							</p>
 						</div>
-						<p>Established in the year 1999, Vikram Creations Pvt. Ltd, is a well known fashion house based
-							out of New
-							Delhi, India. The comapany is a renowned as a manufacturer, wholesaler, trader and supplier
-							of women
-							fashion. The company owns and operates 7 brands namely Elomelo, Style Girl, A Sweet Design,
-							Elly Ross,
-							Style Plus, Denim Studio and Active Spirits, each with their own distinct identity. All
-							these branded
-							garments are especially designed and crafted by a well trianed team of in-house designers.
-						</p>
+						
 						<div class="footer-social">
 							<ul>
 								<li>
