--- a/src/app/pages/account/login/login.component.html
+++ b/src/app/pages/account/login/login.component.html
@@ -1,39 +1,41 @@
 <!-- <app-breadcrumb [title]="'Login'" [breadcrumb]="'Login'"></app-breadcrumb> -->
 <!-- section start -->
-<section class="login-page section-b-space">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
+<div class="login-page">
+    <div class="row">
+        <div class="col-lg-4 login-left-bg theme-card">
+            <div class="login-left">
                 <h3>Login</h3>
-                <div class="theme-card">
-                    <form class="theme-form" [formGroup]="LoginForm">
-                        <div class="form-group">
-                            <label for="email">Email <span style="color: red;">*</span></label>
-                            <input type="text" class="form-control" id="email" formControlName="LoginId" placeholder="Email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="review">Password <span style="color: red;">*</span></label>
-                            <input type="password" class="form-control" id="review" formControlName="password" placeholder="Enter your password" required>
-                        </div>
-                        <div class="form-group">
-                            <a data-lng="en" href='pages/forget/password'> 
-                                Forgot Password?
-                            </a>
-                        </div>
-                        <button class="btn btn-solid" (click)="Login()">Login</button>
-                        <button class="btn btn-solid" style="float:right;" (click)="close()">Close</button>
-                    </form>
-                </div>
+                <img src="assets/images/icon/logo.svg" alt="VIKRAM CREATION" class="img-fluid">
             </div>
-            <div class="col-lg-6 right-login">
-                <h3>New Customer</h3>
-                <div class="theme-card authentication-right">
-                    <h6 class="title-font">Create A Account</h6>
-                    <p>Sign up for a free account at our store. Registration is quick and easy. It allows you to be able to order from our shop. To start shopping click register.</p>
-                    <button class="btn btn-solid" (click)="Register();">Create an Account</button>
+        </div>
+        <div class="col-lg-8">
+            <div class="theme-card">
+                <form class="theme-form" [formGroup]="LoginForm">
+                    <div class="form-group">
+                        <label for="email">Email <span style="color: red;">*</span></label>
+                        <input type="text" class="form-control" id="email" formControlName="LoginId" placeholder="Email"
+                            required>
+                    </div>
+                    <div class="form-group">
+                        <label for="review">Password <span style="color: red;">*</span></label>
+                        <input type="password" class="form-control" id="review" formControlName="password"
+                            placeholder="Enter your password" required>
+                    </div>
+                    <button class="btn btn-solid w-100" (click)="Login()">Login</button>
+                    <div class="form-group text-center mt-5">
+                        <a data-lng="en" href='pages/forget/password'>
+                            Forgot Password?
+                        </a>
+                    </div>
+                </form>
+                <div class="authentication-right text-center mt-5">
+                    <p>If you are new please <button class="btn btn-link" (click)="Register();">Create an Account</button></p>
+                    
                 </div>
+                <a class="close" (click)="close()"><img src="assets/images/icon/close.svg" alt="Close" ></a>
+                
             </div>
         </div>
     </div>
-</section>
+</div>
 <!--Section ends-->
