--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="'Reset Password'" [breadcrumb]="'Reset Password'"></app-breadcrumb>
+<!-- <app-breadcrumb [title]="'Reset Password'" [breadcrumb]="'Reset Password'"></app-breadcrumb> -->
 <!-- section start -->
 <section class="pwd-page">
     <div class="container">
