--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="'About-us'" [breadcrumb]="'About-us'"></app-breadcrumb>
+<!-- <app-breadcrumb [title]="'About-us'" [breadcrumb]="'About-us'"></app-breadcrumb> -->
 <!-- about section start -->
 <section class="about-page  section-b-space">
     <div class="container">
