--- a/src/app/pages/account/checkout/checkout.component.html
+++ b/src/app/pages/account/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="'Checkout'" [breadcrumb]="'Checkout'"></app-breadcrumb>
+<!-- <app-breadcrumb [title]="'Checkout'" [breadcrumb]="'Checkout'"></app-breadcrumb> -->
 <!-- section start -->
 <section class="section-b-space">
     <div class="container padding-cls">
