--- a/src/app/pages/account/forget-password/forget-password.component.html
+++ b/src/app/pages/account/forget-password/forget-password.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="'Forgot Password'" [breadcrumb]="'Forgot Password'"></app-breadcrumb>
+<!-- <app-breadcrumb [title]="'Forgot Password'" [breadcrumb]="'Forgot Password'"></app-breadcrumb> -->
 <!-- section start -->
 <section class="pwd-page">
     <div class="container">
