--- a/src/app/pages/account/wishlist/wishlist.component.html
+++ b/src/app/pages/account/wishlist/wishlist.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="'Register'" [breadcrumb]="'Register'"></app-breadcrumb>
+<!-- <app-breadcrumb [title]="'Register'" [breadcrumb]="'Register'"></app-breadcrumb> -->
 <!-- section start -->
 <section class="wishlist-section section-b-space">
     <div class="container">
