--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="'404'" [breadcrumb]="'404'"></app-breadcrumb>
+<!-- <app-breadcrumb [title]="'404'" [breadcrumb]="'404'"></app-breadcrumb> -->
 <!-- section start -->
 <section class="p-0">
     <div class="container">
