--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="'Search'" [breadcrumb]="'Search'"></app-breadcrumb>
+<!-- <app-breadcrumb [title]="'Search'" [breadcrumb]="'Search'"></app-breadcrumb> -->
 <!-- section start -->
 <section class="authentication-page section-b-space">
     <div class="container">
