--- a/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="productkart[0]?.productName" [breadcrumb]="'Product'"></app-breadcrumb>
+<!-- <app-breadcrumb [title]="productkart[0]?.productName" [breadcrumb]="'Product'"></app-breadcrumb> -->
 <!-- section start -->
 <!-- {{productkart[0]|json}} -->
 <section class="section-b-space">
