--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="productkart[0]?.productName" [breadcrumb]="'Product'"></app-breadcrumb>
+<!-- <app-breadcrumb [title]="productkart[0]?.productName" [breadcrumb]="'Product'"></app-breadcrumb> -->
 <!-- section start -->
 <section class="section-b-space">
     <div class="collection-wrapper">
